--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,13 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "2049170894:AAEtQ6CFBPqhR4api99FqmO56xArWcE0H-o"                              # Require restart after changing it while bot running
+OWNER_ID = "910674886"                               # Require restart after changing it while bot running
+TELEGRAM_API = "15523035"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "33a37e968712427c2e7971cb03f341b3"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://TGBot:Save@koyeb.vvt99ro.mongodb.net/?retryWrites=true&w=majority&appName=Koyeb"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
